Visualization and SFTP connection

--- a/notebooks/Explore ShapeNet.ipynb
+++ b/notebooks/Explore ShapeNet.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -34,25 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'osp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m category \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAirplane\u001B[39m\u001B[38;5;124m'\u001B[39m  \u001B[38;5;66;03m# Pass in `None` to train on all categories.\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m path \u001B[38;5;241m=\u001B[39m \u001B[43mosp\u001B[49m\u001B[38;5;241m.\u001B[39mrealpath(osp\u001B[38;5;241m.\u001B[39mjoin(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m..\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mShapeNet\u001B[39m\u001B[38;5;124m'\u001B[39m))\n\u001B[0;32m      4\u001B[0m pre_transform, transform \u001B[38;5;241m=\u001B[39m T\u001B[38;5;241m.\u001B[39mNormalizeScale(), T\u001B[38;5;241m.\u001B[39mFixedPoints(\u001B[38;5;241m128\u001B[39m)\n\u001B[0;32m      5\u001B[0m train_dataset \u001B[38;5;241m=\u001B[39m ShapeNet(path, category, split\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtrain\u001B[39m\u001B[38;5;124m'\u001B[39m, transform\u001B[38;5;241m=\u001B[39mtransform, pre_transform\u001B[38;5;241m=\u001B[39mpre_transform)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'osp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "category = 'Airplane'  # Pass in `None` to train on all categories.\n",
     "path = osp.realpath(osp.join('..', 'data', 'ShapeNet'))\n",
@@ -69,18 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train_dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [2]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m data \u001B[38;5;241m=\u001B[39m \u001B[43mtrain_dataset\u001B[49m\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;241m0\u001B[39m)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'train_dataset' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FixedPoints(128, replace=True)\n"
      ]
     }
    ],
@@ -90,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
