--- a/notebooks/Explore ShapeNet.ipynb
+++ b/notebooks/Explore ShapeNet.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,85 +95,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'model' from 'train_3Dhyperbolic' (C:\\Users\\olvcp\\PycharmProjects\\HPCS\\train_3Dhyperbolic.py)",
+     "ename": "NameError",
+     "evalue": "name 'MyLightningModule' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mImportError\u001B[0m                               Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [30]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtrain_3Dhyperbolic\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m model\n",
-      "\u001B[1;31mImportError\u001B[0m: cannot import name 'model' from 'train_3Dhyperbolic' (C:\\Users\\olvcp\\PycharmProjects\\HPCS\\train_3Dhyperbolic.py)"
-     ]
-    }
-   ],
-   "source": [
-    "from train_3Dhyperbolic import model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'_io.TextIOWrapper' object has no attribute 'load_from_checkpoint'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [27]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m best_model \u001B[38;5;241m=\u001B[39m wandb\u001B[38;5;241m.\u001B[39mrestore(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmodel.h5\u001B[39m\u001B[38;5;124m'\u001B[39m, run_path\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpierreoo/HPCS/runs/pmcouv1r\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m----> 2\u001B[0m \u001B[43mbest_model\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload_from_checkpoint\u001B[49m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmodel.h5\u001B[39m\u001B[38;5;124m'\u001B[39m, run_path\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpierreoo/HPCS/runs/pmcouv1r\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "\u001B[1;31mAttributeError\u001B[0m: '_io.TextIOWrapper' object has no attribute 'load_from_checkpoint'"
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [10]\u001B[0m, in \u001B[0;36m<cell line: 3>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m best_model \u001B[38;5;241m=\u001B[39m wandb\u001B[38;5;241m.\u001B[39mrestore(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmodel.h5\u001B[39m\u001B[38;5;124m'\u001B[39m, run_path\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpierreoo/HPCS/runs/pmcouv1r\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# model.load_from_checkpoint(best_model.name)\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m new_model \u001B[38;5;241m=\u001B[39m \u001B[43mMyLightningModule\u001B[49m\u001B[38;5;241m.\u001B[39mload_from_checkpoint(best_model\u001B[38;5;241m.\u001B[39mname)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'MyLightningModule' is not defined"
      ]
     }
    ],
    "source": [
     "best_model = wandb.restore('model.h5', run_path='pierreoo/HPCS/runs/pmcouv1r')\n",
-    "best_model.load_from_checkpoint('model.h5', run_path='pierreoo/HPCS/runs/pmcouv1r')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\olvcp\\anaconda3\\envs\\hyperbolic\\lib\\site-packages\\pytorch_lightning\\loops\\utilities.py:92: PossibleUserWarning: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
-      "  rank_zero_warn(\n",
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pytorch_lightning as pl\n",
-    "trainer = pl.Trainer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<_io.TextIOWrapper name='C:\\\\Users\\\\olvcp\\\\PycharmProjects\\\\HPCS\\\\notebooks\\\\model.h5' mode='r' encoding='cp1252'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(best_model)"
+    "model.load_from_checkpoint(best_model.name)"
    ]
   },
   {
