--- a/notebooks/Explore ShapeNet.ipynb
+++ b/notebooks/Explore ShapeNet.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -36,9 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -95,24 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'MyLightningModule' is not defined",
+     "ename": "ValueError",
+     "evalue": "File model.h5 not found in pierreoo/HPCS/runs/dn8w6k8q.",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [10]\u001B[0m, in \u001B[0;36m<cell line: 3>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m best_model \u001B[38;5;241m=\u001B[39m wandb\u001B[38;5;241m.\u001B[39mrestore(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmodel.h5\u001B[39m\u001B[38;5;124m'\u001B[39m, run_path\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpierreoo/HPCS/runs/pmcouv1r\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# model.load_from_checkpoint(best_model.name)\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m new_model \u001B[38;5;241m=\u001B[39m \u001B[43mMyLightningModule\u001B[49m\u001B[38;5;241m.\u001B[39mload_from_checkpoint(best_model\u001B[38;5;241m.\u001B[39mname)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'MyLightningModule' is not defined"
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [6]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m best_model \u001B[38;5;241m=\u001B[39m \u001B[43mwandb\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrestore\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mmodel.h5\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mrun_path\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mpierreoo/HPCS/runs/dn8w6k8q\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\anaconda3\\envs\\hyperbolic\\lib\\site-packages\\wandb\\sdk\\wandb_run.py:3297\u001B[0m, in \u001B[0;36mrestore\u001B[1;34m(name, run_path, replace, root)\u001B[0m\n\u001B[0;32m   3295\u001B[0m \u001B[38;5;66;03m# if the file does not exist, the file has an md5 of 0\u001B[39;00m\n\u001B[0;32m   3296\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m files[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m.\u001B[39mmd5 \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m0\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[1;32m-> 3297\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFile \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mname\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m not found in \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mrun_path \u001B[38;5;129;01mor\u001B[39;00m root\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m   3298\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m files[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m.\u001B[39mdownload(root\u001B[38;5;241m=\u001B[39mroot, replace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "\u001B[1;31mValueError\u001B[0m: File model.h5 not found in pierreoo/HPCS/runs/dn8w6k8q."
      ]
     }
    ],
    "source": [
-    "best_model = wandb.restore('model.h5', run_path='pierreoo/HPCS/runs/pmcouv1r')\n",
-    "model.load_from_checkpoint(best_model.name)"
+    "best_model = wandb.restore('model.h5', run_path='pierreoo/HPCS/runs/dn8w6k8q')"
    ]
   },
   {
