partnet notebook level

--- a/notebooks/PartNet.ipynb
+++ b/notebooks/PartNet.ipynb
@@ -73,7 +73,7 @@
     "    model, trainer = configure(config, shapes)\n",
     "    \n",
     "    wandb.restore('model.ckpt', run_path=model_path)\n",
-    "    model = model.load_from_checkpoint('model.ckpt', plot_inference=plot)\n",
+    "    model = model.load_from_checkpoint('model.ckpt', plot_inference=plot, level=level)\n",
     "\n",
     "    trainer.test(model, test_loader)"
    ]
