partnet notebook accelerator

--- a/notebooks/PartNet.ipynb
+++ b/notebooks/PartNet.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -73,7 +73,7 @@
     "    model, trainer = configure(config, shapes)\n",
     "    \n",
     "    wandb.restore('model.ckpt', run_path=model_path)\n",
-    "    model = model.load_from_checkpoint('model.ckpt', plot_inference=plot, level=level)\n",
+    "    model = model.load_from_checkpoint('model.ckpt', plot_inference=plot, level=level, accelerator='cpu')\n",
     "\n",
     "    trainer.test(model, test_loader)"
    ]
