new partnet models in notebook

--- a/notebooks/PartNet.ipynb
+++ b/notebooks/PartNet.ipynb
@@ -322,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dishwasher_path = 'hpcs/HPCS/runs/rds5yw92'"
+    "dishwasher_path = 'hpcs/HPCS/runs/24htv9vi'"
    ]
   },
   {
@@ -706,7 +706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "microwave_path = 'hpcs/HPCS/runs/1xe7bulz'"
+    "microwave_path = 'hpcs/HPCS/runs/1q3aitz3'"
    ]
   },
   {
